--- a/packages/dts-gen/package.json
+++ b/packages/dts-gen/package.json
@@ -29,8 +29,10 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@cybozu/eslint-config": "^17.0.1",
     "axios": "^0.27.2",
     "commander": "^9.2.0",
+    "eslint": "^8.15.0",
     "form-data": "^4.0.0",
     "lodash": "^4.17.21",
     "prettier": "^2.6.2"
