--- a/packages/dts-gen/package.json
+++ b/packages/dts-gen/package.json
@@ -38,6 +38,7 @@
     "prettier": "^2.6.2"
   },
   "devDependencies": {
+    "@types/eslint": "^8.4.2",
     "@types/lodash": "^4.14.182",
     "ts-loader": "^9.3.0",
     "webpack": "^5.72.1",
