--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,6 +18,7 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: 16.x
+        cache: yarn
     - name: yarn install, and yarn lint
       run: |
         yarn install
