--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -19,6 +19,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16.x
+          cache: yarn
       - run: yarn install
       - name: Generate next release (dry-run)
         run: yarn run lerna version --conventional-commits --no-git-tag-version --no-push --yes
