ci(webpack-plugin-kintone-plugin): run jest on CI

--- a/packages/webpack-plugin-kintone-plugin/package.json
+++ b/packages/webpack-plugin-kintone-plugin/package.json
@@ -13,7 +13,7 @@
     "clean": "rimraf dist",
     "lint": "eslint 'src/**/*.ts'",
     "test": "jest",
-    "test:ci": "test --runInBand"
+    "test:ci": "jest --runInBand"
   },
   "keywords": [
     "webpack",
