use `working-directory` instead of `cd`

--- a/.github/workflows/yamory.yml
+++ b/.github/workflows/yamory.yml
@@ -21,8 +21,8 @@ jobs:
       env:
         # https://cli.yamory.io/yamory-app-library-scan-scripts/yamory-yarn-sha512sum.txt
         YAMORY_YARN_SCRIPT_SHA512: "940f8755e77a9a19e7bbbb673936d8779bfd9f9871994e6f86855907917965e3ac732a39d761be4b384fefed696b9c72cfd6752a14fc417ebde4126a75b5f40e"
+      working-directory: /tmp
       run: |
-        cd /tmp
         curl -sSf -L -o ./yamory-yarn.sh \
         https://localscanner.yamory.io/script/yarn
         echo "${YAMORY_YARN_SCRIPT_SHA512} yamory-yarn.sh" | sha512sum --check -
