--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,9 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
       - name: Configure npm user
-        run: npm config set '//registry.npmjs.org/:_authToken=${NPM_TOKEN}'
+        run: npm config set "//registry.npmjs.org/:_authToken=${NPM_TOKEN}"
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Store data-loader version before release
         run: echo "::set-output name=data-loader::$(jq -r '.version' ./packages/data-loader/package.json)"
         id: version_before_release
