--- a/packages/create-plugin/package.json
+++ b/packages/create-plugin/package.json
@@ -27,7 +27,8 @@
     "os-locale": "^5.0.0",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
-    "sort-package-json": "^1.57.0"
+    "sort-package-json": "^1.57.0",
+    "normalize-path": "^3.0.0"
   },
   "devDependencies": {
     "@types/glob": "^8.0.0",
@@ -35,6 +36,7 @@
     "@types/lodash": "^4.14.188",
     "@types/node-rsa": "^1.1.1",
     "@types/rimraf": "^3.0.2",
+    "@types/normalize-path": "^3.0.0",
     "cross-env": "^7.0.3"
   },
   "files": [
