chore: update to yarn fix instead of yarn fix"lint

--- a/packages/customize-uploader/package.json
+++ b/packages/customize-uploader/package.json
@@ -13,7 +13,7 @@
     "prebuild": "yarn clean",
     "build": "tsc --build --force",
     "lint": "eslint --ext .ts src",
-    "fix:lint": "yarn lint --fix",
+    "fix": "yarn lint --fix",
     "test": "jest",
     "test:ci": "jest --runInBand",
     "clean": "rimraf dist",
