--- a/packages/plugin-manifest-validator/package.json
+++ b/packages/plugin-manifest-validator/package.json
@@ -24,7 +24,7 @@
     "test": "jest",
     "test:ci": "jest --runInBand",
     "lint": "eslint --ext .ts src",
-    "fix:lint": "yarn lint --fix",
+    "fix": "yarn lint --fix",
     "clean": "rimraf dist"
   },
   "dependencies": {
