--- a/packages/dts-gen/package.json
+++ b/packages/dts-gen/package.json
@@ -8,7 +8,7 @@
     "build": "tsc --build --force",
     "postbuild": "bin/npm-build.sh && yarn build:integration",
     "clean": "rimraf dist",
-    "fix:lint": "yarn lint:eslint --fix",
+    "fix:eslint": "yarn lint:eslint --fix",
     "fix:prettier": "prettier --parser typescript --write \"src/**/*.{ts,tsx}\" ./kintone.d.ts",
     "fix": "run-p fix:*",
     "lint:eslint": "eslint 'src/**/*.ts' ",
