--- a/packages/plugin-uploader/package.json
+++ b/packages/plugin-uploader/package.json
@@ -15,7 +15,7 @@
     "build": "tsc --build --force",
     "clean": "rimraf dist",
     "lint": "eslint 'src/**/*.ts' 'bin/*.js'",
-    "fix:lint": "yarn lint --fix",
+    "fix": "yarn lint --fix",
     "test": "echo 'no test'",
     "test:ci": "yarn test"
   },
