--- a/packages/rest-api-client/package.json
+++ b/packages/rest-api-client/package.json
@@ -63,8 +63,9 @@
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@types/core-js": "^2.5.5",
     "@types/js-base64": "^3.0.0",
-    "@types/qs": "^6.9.7",
     "@types/mime": "^3.0.1",
+    "@types/qs": "^6.9.7",
+    "blob-polyfill": "^7.0.20220408",
     "rollup": "^2.79.1",
     "rollup-plugin-ecma-version-validator": "^0.2.12",
     "rollup-plugin-node-builtins": "^2.1.2",
