chore: approve the Blue Oak Model License

--- a/license-finder-decisions.yml
+++ b/license-finder-decisions.yml
@@ -101,6 +101,12 @@
     :why: 
     :versions: []
     :when: 2021-03-23 13:01:00.000000000 Z
+- - :permit
+  - BlueOak-1.0.0
+  - :who:
+    :why:
+    :versions: []
+    :when: 2023-03-10 03:14:29.800587000 Z
 - - :approve
   - fsevents
   - :who: 
