--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -47,8 +47,8 @@ body:
         Please provide [minimum reproduction](https://stackoverflow.com/help/minimal-reproducible-example) steps of the bug.
         If you have a reproduction repository, [GitHub Gist](https://gist.github.com/) snippet, or some external pages, please share the links.
       placeholder: |
-        1. Prepare a Kintone App with the following fields...
-        2. Run cli-kintone with the following options...
+        1. Install @kintone/...
+        2. Run the following code snippet
         ...
     validations:
       required: true
