--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -74,6 +74,7 @@ body:
         - Operating System: ...
         - Browser: ...
         - Node.js version: ...
+        - TypeScript version: ...
       description: |
         What environment did the bug occur on?
         You can paste the output of `npx envinfo --system --npmPackages '{typescript,@kintone/*}' --binaries --browsers`.
