--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -46,7 +46,8 @@ body:
       description: |
         Please provide [minimum reproduction](https://stackoverflow.com/help/minimal-reproducible-example) steps of the bug.
         If you have a reproduction repository, [GitHub Gist](https://gist.github.com/) snippet, or some external pages, please share the links.
-        WARNING: DO NOT SUBMIT CONFIDENTIAL INFORMATION SUCH AS YOUR SUBDOMAIN AND PASSWORD
+        
+        :warning: DO NOT SUBMIT CONFIDENTIAL INFORMATION SUCH AS YOUR SUBDOMAIN AND PASSWORD
       placeholder: |
         1. Install @kintone/...
         2. Run the following code snippet
