--- a/packages/create-plugin/tsconfig.json
+++ b/packages/create-plugin/tsconfig.json
@@ -9,7 +9,7 @@
       "types"
     ],
   },
-  "indlude": ["src/**/*.ts"],
+  "include": ["src/**/*.ts"],
   "exclude": ["templates/**/*.ts"],
   "references": []
 }
