--- a/packages/webpack-plugin-kintone-plugin/package.json
+++ b/packages/webpack-plugin-kintone-plugin/package.json
@@ -7,12 +7,11 @@
     "node": ">=16"
   },
   "scripts": {
-    "start": "yarn build --watch",
-    "prebuild": "yarn clean",
-    "build": "tsc --build --force",
+    "start": "pnpm build --watch",
+    "build": "pnpm clean && tsc --build --force",
     "clean": "rimraf dist",
     "lint": "eslint 'src/**/*.ts'",
-    "fix": "yarn lint --fix",
+    "fix": "pnpm lint --fix",
     "test": "jest --runInBand",
     "test:ci": "jest --runInBand"
   },
