--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -15,13 +15,14 @@ jobs:
         with:
           # fetch all commits and tags (https://github.com/lerna/lerna/issues/2542)
           fetch-depth: "0"
+      - uses: pnpm/action-setup@v2
       - name: Use Node.js 18.x
         uses: actions/setup-node@v3
         with:
           node-version: 18.x
-          cache: yarn
-      - run: yarn install --frozen-lockfile
+          cache: pnpm
+      - run: pnpm install --frozen-lockfile
       - name: Generate next release (dry-run)
-        run: yarn run lerna version --conventional-commits --no-git-tag-version --no-push --yes
+        run: pnpm run lerna version --conventional-commits --no-git-tag-version --no-push --yes
       - name: Show CHANGELOG.md
         run: git diff ./packages/*/CHANGELOG.md
