--- a/packages/profile-loader/package.json
+++ b/packages/profile-loader/package.json
@@ -33,18 +33,17 @@
     "node": ">=16"
   },
   "scripts": {
-    "prebuild": "yarn clean",
-    "build": "tsc --build --force",
+    "build": "pnpm clean && tsc --build --force",
     "lint": "run-p -l lint:*",
     "test": "jest",
     "test:ci": "jest --runInBand",
     "clean": "rimraf lib esm umd",
-    "fix:lint": "yarn lint:eslint --fix",
+    "fix:lint": "pnpm lint:eslint --fix",
     "fix:md": "prettier --write README.md",
     "fix": "run-p fix:*",
     "lint:eslint": "eslint 'src/**/*.ts'",
     "lint:md": "prettier --check README.md",
-    "start": "yarn build --watch"
+    "start": "pnpm build --watch"
   },
   "dependencies": {
     "toml": "^3.0.0"
