--- a/packages/rest-api-client/tsconfig.json
+++ b/packages/rest-api-client/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../tsconfig-base.json",
   "compilerOptions": {
     "target": "es5",
-    "lib": ["es5", "es2015.promise", "es2015.iterable", "es2015.symbol", "es2015.symbol.wellknown"],
+    "lib": ["es5", "es2015.promise", "es2015.iterable", "es2015.symbol", "es2015.symbol.wellknown", "DOM"],
     "outDir": "./lib",
     "rootDir": "./",
     "typeRoots": [
