debug: update workflows

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,6 +28,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: pnpm
-    - run: pnpm install --network-timeout 900000 --frozen-lockfile
+    - run: pnpm install --frozen-lockfile
     - run: pnpm build
     - run: pnpm test:ci
