--- a/packages/dts-gen/package.json
+++ b/packages/dts-gen/package.json
@@ -5,8 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "prebuild": "pnpm clean",
-    "build": "pnpm prebuild && tsc --build --force && pnpm postbuild",
-    "postbuild": "./bin/npm-build.sh && pnpm build:integration",
+    "build": "pnpm prebuild && tsc --build --force && bin/npm-build.sh && pnpm build:integration",
+    "postbuild": "bin/npm-build.sh && pnpm build:integration",
     "clean": "rimraf dist",
     "fix:eslint": "pnpm lint:eslint --fix",
     "fix:prettier": "prettier --parser typescript --write \"src/**/*.{ts,tsx}\" ./kintone.d.ts",
