--- a/packages/plugin-uploader/package.json
+++ b/packages/plugin-uploader/package.json
@@ -11,7 +11,8 @@
   },
   "scripts": {
     "start": "pnpm build --watch",
-    "build": "pnpm clean && tsc --build --force",
+    "prebuild": "pnpm clean",
+    "build": "pnpm prebuild && tsc --build --force",
     "clean": "rimraf dist",
     "lint": "eslint 'src/**/*.ts' 'bin/*.js'",
     "fix": "pnpm lint --fix",
