--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,36 +1,34 @@
-
 name: release
-
 on:
-  workflow_dispatch:
+  pull_request:
+    branches:
+      - 'ci/migrate-to-release-please'
 
 jobs:
-  version:
-    name: Release packages
-    runs-on: ubuntu-latest
+  release:
+    name: Create release
     permissions:
       contents: write
+      pull-requests: write
+    outputs:
+      release_created: ${{ steps.release.outputs.release_created }}
+      tag_name: ${{ steps.release.outputs.tag_name }}
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: google-github-actions/release-please-action@ee9822ec2c397e8a364d634464339ac43a06e042 # v3
+        id: release
         with:
-          # fetch all commits and tags (https://github.com/lerna/lerna/issues/2542)
-          fetch-depth: "0"
-      - name: Use Node.js 18.x
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18.x
-          cache: yarn
-      - run: yarn install --frozen-lockfile
-      - name: Configure git user
-        run: |
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git config --global user.name "github-actions[bot]"
-      - name: Configure npm user
-        run: npm config set "//registry.npmjs.org/:_authToken=${NPM_TOKEN}"
-        env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-      - name: Release packages
-        run: yarn release --no-verify-access --yes
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          command: manifest
+
+  publish:
+    name: Publish release
+    permissions:
+      contents: write
+    runs-on: ubuntu-latest
+    needs: release
+    if: ${{ needs.release.outputs.release_created }}
+    env:
+      GH_REPO: ${{ github.repository }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    steps:
+      - run: gh release edit ${{ needs.release.outputs.tag_name }} --draft=false
