--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: google-github-actions/release-please-action@ee9822ec2c397e8a364d634464339ac43a06e042 # v3
         id: release
         with:
-          command: manifest
+          command: manifest --target-branch ci/migrate-to-release-please
 
   publish:
     name: Publish release
