ci: update config

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -9,6 +9,7 @@
   "versioning": "default",
   "include-v-in-tag": true,
   "tag-separator": "@",
+  "monorepo-tags": true,
   "plugins": ["node-workspace"],
   "group-pull-request-title-pattern": "chore: release ${branch}",
   "packages": {
