--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -18,8 +18,11 @@ jobs:
       - uses: google-github-actions/release-please-action@ee9822ec2c397e8a364d634464339ac43a06e042 # v3
         id: release
         with:
-          command: manifest --target-branch "ci/migrate-to-release-please"
+          command: manifest --target-branch "ci/migrate-to-release-please" --debug
           default-branch: "ci/migrate-to-release-please"
+      - run: |
+          echo 'pr: ${{ steps.release.outputs.pr }}'
+          echo 'prs: ${{ steps.release.outputs.prs }}'
 
   publish:
     name: Publish release
