ci: update config

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -7,8 +7,7 @@
   "bump-patch-for-minor-pre-major": false,
   "changelog-path": "CHANGELOG.md",
   "versioning": "default",
-  "include-v-in-tag": true,
-  "include-component-in-tag": false,
+  "include-v-in-tag": false,
   "tag-separator": "@",
   "monorepo-tags": true,
   "plugins": ["node-workspace"],
