--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -1,12 +1,12 @@
 {
-  "@kintone/rest-api-client-demo": "4.0.4",
-  "@kintone/create-plugin": "6.0.4",
-  "@kintone/customize-uploader": "7.0.3",
-  "@kintone/dts-gen": "7.0.4",
-  "@kintone/plugin-manifest-validator": "9.0.1",
-  "@kintone/plugin-packer": "7.0.4",
-  "@kintone/plugin-uploader": "8.0.0",
-  "@kintone/profile-loader": "4.0.0",
-  "@kintone/rest-api-client": "4.0.3",
-  "@kintone/webpack-plugin-kintone-plugin": "7.0.4"
+  "examples/rest-api-client-demo": "4.0.4",
+  "packages/create-plugin": "6.0.4",
+  "packages/customize-uploader": "7.0.3",
+  "packages/dts-gen": "7.0.4",
+  "packages/plugin-manifest-validator": "9.0.1",
+  "packages/plugin-packer": "7.0.4",
+  "packages/plugin-uploader": "8.0.0",
+  "packages/profile-loader": "4.0.0",
+  "packages/rest-api-client": "4.0.3",
+  "packages/webpack-plugin-kintone-plugin": "7.0.4"
 }
