--- a/release-please-config.json
+++ b/release-please-config.json
@@ -14,34 +14,44 @@
   "group-pull-request-title-pattern": "chore: release ${branch}",
   "packages": {
     "examples/rest-api-client-demo": {
-      "package-name": "@kintone/rest-api-client-demo"
+      "package-name": "@kintone/rest-api-client-demo",
+      "component": "@kintone/rest-api-client-demo"
     },
     "packages/create-plugin": {
-      "package-name": "@kintone/create-plugin"
+      "package-name": "@kintone/create-plugin",
+      "component": "@kintone/create-plugin"
     },
     "packages/customize-uploader": {
-      "package-name": "@kintone/customize-uploader"
+      "package-name": "@kintone/customize-uploader",
+      "component": "@kintone/customize-uploader"
     },
     "packages/dts-gen": {
-      "package-name": "@kintone/dts-gen"
+      "package-name": "@kintone/dts-gen",
+      "component": "@kintone/dts-gen"
     },
     "packages/plugin-manifest-validator": {
-      "package-name": "@kintone/plugin-manifest-validator"
+      "package-name": "@kintone/plugin-manifest-validator",
+      "component": "@kintone/plugin-manifest-validator"
     },
     "packages/plugin-packer": {
-      "package-name": "@kintone/plugin-packer"
+      "package-name": "@kintone/plugin-packer",
+      "component": "@kintone/plugin-packer"
     },
     "packages/plugin-uploader": {
-      "package-name": "@kintone/plugin-uploader"
+      "package-name": "@kintone/plugin-uploader",
+      "component": "@kintone/plugin-uploader"
     },
     "packages/profile-loader": {
-      "package-name": "@kintone/profile-loader"
+      "package-name": "@kintone/profile-loader",
+      "component": "@kintone/profile-loader"
     },
     "packages/rest-api-client": {
-      "package-name": "@kintone/rest-api-client"
+      "package-name": "@kintone/rest-api-client",
+      "component": "@kintone/rest-api-client"
     },
     "packages/webpack-plugin-kintone-plugin": {
-      "package-name": "@kintone/webpack-plugin-kintone-plugin"
+      "package-name": "@kintone/webpack-plugin-kintone-plugin",
+      "component": "@kintone/webpack-plugin-kintone-plugin"
     }
   }
 }
