--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -10,6 +10,8 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
+    outputs:
+      release_created: ${{ steps.release.outputs.release_created }}
     runs-on: ubuntu-latest
     steps:
       - uses: google-github-actions/release-please-action@ee9822ec2c397e8a364d634464339ac43a06e042 # v3
@@ -19,6 +21,7 @@ jobs:
           default-branch: "ci/migrate-to-release-please"
 
   publish:
+    name: Publish to npm
     runs-on: ubuntu-latest
     needs: release
     if: ${{ needs.release.outputs.release_created }}
@@ -28,9 +31,14 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18.x
-          registry-url: 'https://registry.npmjs.org'
+          cache: yarn
       - run: yarn install --frozen-lockfile
-      - run: yarn build
-      - run: yarn publish
+      - name: Configure git user
+        run: |
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+      - name: Configure npm user
+        run: npm config set "//registry.npmjs.org/:_authToken=${NPM_TOKEN}"
         env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - run: yarn run lerna publish from-package --no-push --no-verify-access --yes
