--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,13 +14,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-        - uses: pnpm/action-setup@v2
-          with:
-            version: 8.6.5
-        - uses: actions/setup-node@v3
-          with:
-            node-version: '18'
-            cache: 'pnpm'
+
+    - uses: pnpm/action-setup@v2
+      with:
+        version: 8.6.5
+
+    - uses: actions/setup-node@v3
+      with:
+        node-version: '18'
+
+    - name: Set up pnpm cache
+      uses: actions/cache@v3
+      with:
+        path: ~/.pnpm-store
+        key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
+
     - run:  pnpm install --frozen-lockfile
     - run:  pnpm build
     - run:  pnpm lint
