--- a/.github/workflows/yamory.yml
+++ b/.github/workflows/yamory.yml
@@ -12,13 +12,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+
     - uses: pnpm/action-setup@v2
       with:
         version: 8.6.5
+
     - uses: actions/setup-node@v3
       with:
         node-version: '18'
-        cache: 'pnpm'
+
+    - name: Set up pnpm cache
+      uses: actions/cache@v3
+      with:
+        path: ~/.pnpm-store
+        key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
+
     - name: download and validate Yamory script
       working-directory: /tmp
       run: |
