build: update package.json in packages

--- a/packages/dts-gen/package.json
+++ b/packages/dts-gen/package.json
@@ -4,11 +4,10 @@
   "description": "Types for kintone js api and Types generating tools",
   "main": "dist/index.js",
   "scripts": {
-    "prebuild": "yarn clean",
-    "build": "tsc --build --force",
-    "postbuild": "bin/npm-build.sh && yarn build:integration",
+    "build": "run-s clean 'tsc --build --force' npm-build build:integration",
+    "npm-build": "bin/npm-build.sh",
     "clean": "rimraf dist",
-    "fix:eslint": "yarn lint:eslint --fix",
+    "fix:eslint": "pnpm lint:eslint --fix",
     "fix:prettier": "prettier --parser typescript --write \"src/**/*.{ts,tsx}\" ./kintone.d.ts",
     "fix": "run-p fix:*",
     "lint:eslint": "eslint 'src/**/*.ts' ",
