--- a/packages/plugin-manifest-validator/package.json
+++ b/packages/plugin-manifest-validator/package.json
@@ -16,15 +16,14 @@
   ],
   "types": "dist/src/index.d.ts",
   "scripts": {
-    "start": "yarn build --watch",
+    "start": "pnpm build --watch",
     "prebuild": "yarn clean",
-    "build": "tsc --build --force",
-    "postbuild": "yarn gen-dts",
+    "build": "run-s clean 'tsc --build --force' gen-dts",
     "gen-dts": "node script/generate-dts.js",
     "test": "jest",
     "test:ci": "jest --runInBand",
     "lint": "eslint --ext .ts src",
-    "fix": "yarn lint --fix",
+    "fix": "pnpm lint --fix",
     "clean": "rimraf dist"
   },
   "dependencies": {
