--- a/package.json
+++ b/package.json
@@ -4,16 +4,14 @@
   "description": "packages for kintone customizations",
   "private": true,
   "scripts": {
-    "prebuild": "lerna run prebuild --parallel",
     "build": "tsc --build packages --force",
-    "postbuild": "lerna run postbuild --parallel",
-    "lint": "lerna run lint --parallel",
-    "fix": "lerna run fix --parallel",
+    "lint": "run-p lint",
+    "fix": "run-p fix",
     "pretest": "jest",
-    "start": "yarn build --watch",
-    "test": "lerna run test --parallel",
-    "pretest:ci": "yarn pretest",
-    "test:ci": "lerna run test:ci --stream"
+    "start": "pnpm build --watch",
+    "test": "run-p test",
+    "pretest:ci": "pnpm pretest",
+    "test:ci": "pnpm run test:ci --stream"
   },
   "repository": {
     "type": "git",
@@ -38,11 +36,9 @@
     "comment-json": "^4.2.3",
     "eslint": "^8.37.0",
     "jest": "^29.6.1",
-    "lerna": "^6.6.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
     "rimraf": "^4.4.1",
     "typescript": "^4.9.5"
-  },
-  "dependencies": {}
+  }
 }
