--- a/packages/customize-uploader/package.json
+++ b/packages/customize-uploader/package.json
@@ -10,14 +10,13 @@
     "node": ">=16"
   },
   "scripts": {
-    "prebuild": "yarn clean",
-    "build": "tsc --build --force",
+    "build": "run-s clean 'tsc --build --force'",
     "lint": "eslint --ext .ts src",
-    "fix": "yarn lint --fix",
+    "fix": "pnpm lint --fix",
     "test": "jest",
     "test:ci": "jest --runInBand",
     "clean": "rimraf dist",
-    "start": "yarn build --watch"
+    "start": "pnpm build --watch"
   },
   "files": [
     "bin",
