--- a/packages/plugin-uploader/package.json
+++ b/packages/plugin-uploader/package.json
@@ -10,14 +10,13 @@
     "node": ">=16"
   },
   "scripts": {
-    "start": "yarn build --watch",
-    "prebuild": "yarn clean",
-    "build": "tsc --build --force",
+    "start": "pnpm build --watch",
+    "build": "run-s clean 'tsc --build --force'",
     "clean": "rimraf dist",
     "lint": "eslint 'src/**/*.ts' 'bin/*.js'",
-    "fix": "yarn lint --fix",
+    "fix": "pnpm lint --fix",
     "test": "echo 'no test'",
-    "test:ci": "yarn test"
+    "test:ci": "pnpm test"
   },
   "files": [
     "bin",
