--- a/packages/rest-api-client/package.json
+++ b/packages/rest-api-client/package.json
@@ -14,9 +14,8 @@
   "browser": "lib/src/index.browser.js",
   "types": "lib/src/index.d.ts",
   "scripts": {
-    "prebuild": "yarn clean",
-    "build": "tsc --build --force",
-    "postbuild": "run-p build:*",
+    "build": "run-s clean 'tsc --build --force' postBuild",
+    "postBuild": "run-p build:*",
     "lint": "run-p -l lint:*",
     "prepublishOnly": "run-p build:umd_*",
     "test": "jest",
@@ -25,12 +24,12 @@
     "build:umd_prod": "rollup -c --environment BUILD:production",
     "build:esm": "tsc -p tsconfig.esm.json",
     "clean": "rimraf lib esm umd",
-    "fix:lint": "yarn lint:eslint --fix",
+    "fix:lint": "pnpm lint:eslint --fix",
     "fix:md": "prettier --write README.md 'docs/**/*.md'",
     "fix": "run-p fix:*",
     "lint:eslint": "eslint 'src/**/*.ts'",
     "lint:md": "prettier --check README.md 'docs/**/*.md'",
-    "start": "yarn build --watch"
+    "start": "pnpm build --watch"
   },
   "repository": {
     "type": "git",
