--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,4 +47,4 @@ jobs:
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - run: pnpm build
-      - run: pnpm run lerna publish from-package --no-push --no-verify-access --yes
+      - run: pnpm -r publish from-package --no-push --no-verify-access --yes
