--- a/license-finder-decisions.yml
+++ b/license-finder-decisions.yml
@@ -120,27 +120,44 @@
     :versions: []
     :when: 2023-03-10 05:51:54.174711000 Z
 - - :approve
-  - browserify-fs-1.0.0
-  - &1
-    :who:
-    :why:
+  - browserify-fs
+  - :who:
+    :why: Because we will not redistribute this package.
     :versions: []
-    :when: 2023-07-17 09:10:43.522853000 Z
+    :when: 2023-07-18 01:32:13.237225000 Z
 - - :approve
-  - fwd-stream-1.0.4
-  - *1
+  - fwd-stream
+  - :who:
+    :why: Because we will not redistribute this package.
+    :versions: []
+    :when: 2023-07-18 01:33:59.173509000 Z
 - - :approve
-  - indexof-0.0.1
-  - *1
+  - indexof
+  - :who:
+    :why: Because we will not redistribute this package.
+    :versions: []
+    :when: 2023-07-18 01:34:11.309532000 Z
 - - :approve
-  - is-0.2.7
-  - *1
+  - is
+  - :who:
+    :why: Because we will not redistribute this package.
+    :versions: []
+    :when: 2023-07-18 01:34:33.622743000 Z
 - - :approve
-  - level-blobs-0.1.7
-  - *1
+  - level-blobs
+  - :who:
+    :why: Because we will not redistribute this package.
+    :versions: []
+    :when: 2023-07-18 01:34:45.930628000 Z
 - - :approve
-  - level-filesystem-1.2.0
-  - *1
+  - level-filesystem
+  - :who:
+    :why: Because we will not redistribute this package.
+    :versions: []
+    :when: 2023-07-18 01:35:03.444566000 Z
 - - :approve
-  - level-hooks-4.5.0
-  - *1
+  - level-hooks
+  - :who:
+    :why: Because we will not redistribute this package.
+    :versions: []
+    :when: 2023-07-18 01:35:23.408523000 Z
