--- a/packages/rest-api-client/package.json
+++ b/packages/rest-api-client/package.json
@@ -65,6 +65,7 @@
     "@types/js-base64": "^3.0.0",
     "@types/mime": "^3.0.1",
     "@types/qs": "^6.9.7",
+    "@pnpm/tsconfig": "^6.9.7",
     "rollup": "^3.26.2",
     "rollup-plugin-ecma-version-validator": "^0.2.12",
     "rollup-plugin-license": "^3.0.1",
