--- a/packages/create-plugin/package.json
+++ b/packages/create-plugin/package.json
@@ -46,7 +46,7 @@
   ],
   "scripts": {
     "start": "pnpm build --watch",
-    "build": "run-s clean 'tsc --build --force'",
+    "build": "pnpm clean && tsc --build --force",
     "clean": "rimraf dist",
     "lint": "eslint --ext .ts src",
     "fix": "pnpm lint --fix",
